--- a/python_stack/RAG_part1/index.html
+++ b/python_stack/RAG_part1/index.html
@@ -906,7 +906,7 @@
 <p>RAG works by first retrieving relevant information from a large corpus of documents using a retriever model. The retriever model is trained to find the most relevant information given a query. Once the relevant information is retrieved, it is passed to a generator model, which generates the final output.</p>
 <p>If this make no sense to you, don't worry. We will go step by step and understand each component of RAG in detail.</p>
 <p>Let's take an example to understand it visually. If you are a developer you might have used chatgpt, gemini, anthropic, copilot or any other LLM model. These models are trained on large corpus of data and can generate human like text. But what if you want to generate text based on some specific data that is not present in the training data of these models. This is where RAG comes into picture. RAG can be used to augment the knowledge of these models with additional data.</p>
-<p><img src="../images/gpt_interaction.png" alt="RAG Application" width="100%" height="65%"></p>
+<p><img alt="Alt Text" src="../../images/RAG.png" /></p>
 
 
 
