deploy: f1abd97c7014446db4323b4c72f8b072b3a68ec7

--- a/python_stack/RAG_part1/index.html
+++ b/python_stack/RAG_part1/index.html
@@ -893,7 +893,7 @@
 
 
 <h1 id="part-1-how-rag-application-works">PART 1: How RAG application works<a class="toc-permalink" href="#part-1-how-rag-application-works" title="Permanent link">&para;</a></h1>
-<p><img src="../images/rag_part1.jpeg" alt="RAG Application" width="100%" height="65%"></p>
+<p><a href="../../images/rag_part1.jpeg">RAG Application</a></p>
 <h2 id="introduction">Introduction<a class="toc-permalink" href="#introduction" title="Permanent link">&para;</a></h2>
 <p>This is the first post of a complete series of posts that will cover every bits and pieces of RAG internals. We will mostly focus on intuitive understanding of technologies and concepts used in RAG. We will also cover the architecture and design of <strong>RAG</strong> in detail.</p>
 <p>Before doing anythings, the very obvious question that comes to our mind is what is RAG?. Why it is more popular now a days?.</p>
@@ -906,7 +906,7 @@
 <p>RAG works by first retrieving relevant information from a large corpus of documents using a retriever model. The retriever model is trained to find the most relevant information given a query. Once the relevant information is retrieved, it is passed to a generator model, which generates the final output.</p>
 <p>If this make no sense to you, don't worry. We will go step by step and understand each component of RAG in detail.</p>
 <p>Let's take an example to understand it visually. If you are a developer you might have used chatgpt, gemini, anthropic, copilot or any other LLM model. These models are trained on large corpus of data and can generate human like text. But what if you want to generate text based on some specific data that is not present in the training data of these models. This is where RAG comes into picture. RAG can be used to augment the knowledge of these models with additional data.</p>
-<p><img alt="Alt Text" src="../../images/RAG.png" /></p>
+<p><img alt="Alt RAG architecture" src="../../images/RAG.png" /></p>
 
 
 
