deploy: b2c3399182282aff99953415a32e53a9efbe4cae

--- a/python_stack/RAG_part1/index.html
+++ b/python_stack/RAG_part1/index.html
@@ -893,7 +893,7 @@
 
 
 <h1 id="part-1-how-rag-application-works">PART 1: How RAG application works<a class="toc-permalink" href="#part-1-how-rag-application-works" title="Permanent link">&para;</a></h1>
-<p><a href="../../images/rag_part1.jpeg">RAG Application</a></p>
+<p><img alt="RAG Application" src="../../images/rag_part1.jpeg" /></p>
 <h2 id="introduction">Introduction<a class="toc-permalink" href="#introduction" title="Permanent link">&para;</a></h2>
 <p>This is the first post of a complete series of posts that will cover every bits and pieces of RAG internals. We will mostly focus on intuitive understanding of technologies and concepts used in RAG. We will also cover the architecture and design of <strong>RAG</strong> in detail.</p>
 <p>Before doing anythings, the very obvious question that comes to our mind is what is RAG?. Why it is more popular now a days?.</p>
